src-tauri/cargo_check_errors_3_utf8.txt
cargo :     Checking d2r-rust v0.1.0 (F:\mycode\D2Rmutiplay\d2r-rus
t\src-tauri)
所在位置 行:1 字符: 1
+ cargo check 2> cargo_check_errors_3.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking d2...rus 
   t\src-tauri):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0432]: unresolved imports `windows_capture::settings::Cursor
Mode`, `windows_capture::settings::GraphicsCaptureApiSettings`
  --> src\modules\ai.rs:14:29
   |
14 |     settings::{ColorFormat, CursorMode, GraphicsCaptureApiSett
ings},
   |                             ^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^
^^^^ no `GraphicsCaptureApiSettings` in `settings`
   |                             |
   |                             no `CursorMode` in `settings`

error[E0046]: not all trait items implemented, missing: `new`
  --> src\modules\ai.rs:28:1
   |
28 | impl GraphicsCaptureApiHandler for CaptureHandler {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `new
` in implementation
   |
   = help: implement the missing item: `fn new(_: windows_capture::
capture::Context<<Self as GraphicsCaptureApiHandler>::Flags>) -> Re
sult<Self, <Self as GraphicsCaptureApiHandler>::Error> { todo!() }`

error[E0599]: no method named `start` found for struct `CaptureHand
ler` in the current scope
   --> src\modules\ai.rs:107:17
    |
 24 | struct CaptureHandler {
    | --------------------- method `start` not found for this struc
t
...
107 |         handler.start(settings).map_err(|e| format!("鍚姩鎹曡幏澶辫
触: {}", e))?;
    |         --------^^^^^----------
    |         |       |
    |         |       this is an associated function, not a method
    |         help: use associated function syntax instead: `Captur
eHandler::start(settings)`
    |
    = note: found the following associated functions; to be used as
 methods, functions must have a `self` parameter
note: the candidate is defined in the trait `GraphicsCaptureApiHand
ler`
   --> C:\Users\yoyos\.cargo\registry\src\index.crates.io-1949cf8c6
b5b557f\windows-capture-1.5.0\src\capture.rs:234:5
    |
234 | /     fn start<T: TryIntoCaptureItemWithType>(
235 | |         settings: Settings<Self::Flags, T>,
236 | |     ) -> Result<(), GraphicsCaptureApiError<Self::Error>>
237 | |     where
238 | |         Self: Send + 'static,
239 | |         <Self as GraphicsCaptureApiHandler>::Flags: Send,
    | |_________________________________________________________^
    = help: items from traits can only be used if the trait is impl
emented and in scope
    = note: the following traits define an item `start`, perhaps yo
u need to implement one of them:
            candidate #1: `jpeg_decoder::worker::Worker`
            candidate #2: `regex_syntax::ast::visitor::Visitor`
            candidate #3: `regex_syntax::hir::visitor::Visitor`
            candidate #4: `rustls::crypto::SupportedKxGroup`
            candidate #5: `rustls::crypto::hash::Hash`

error[E0599]: no method named `as_raw_nopadding` found for struct `
FrameBuffer<'a>` in the current scope
  --> src\modules\ai.rs:43:36
   |
43 |         let mut bgra_data = buffer.as_raw_nopadding().to_vec()
;
   |                                    ^^^^^^^^^^^^^^^^
   |
help: there is a method `has_padding` with a similar name
   |
43 -         let mut bgra_data = buffer.as_raw_nopadding().to_vec()
;
43 +         let mut bgra_data = buffer.has_padding().to_vec();
   |

error[E0282]: type annotations needed
  --> src\modules\ai.rs:46:13
   |
46 |             chunk.swap(0, 2);
   |             ^^^^^ cannot infer type

Some errors have detailed explanations: E0046, E0282, E0432, E0599.
For more information about an error, try `rustc --explain E0046`.
error: could not compile `d2r-rust` (lib) due to 5 previous errors
